Added all berry patches and description

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ p {
     width: 69.9px;
     background-color: rgb(43, 22, 2);
     color: bisque;
-    text-align: center;
+    text-align: left;
     border: none;
     box-sizing: border-box;
     margin: 5px 0;
