--- a/style.css
+++ b/style.css
@@ -4,6 +4,29 @@
     position: absolute;
 }
 
+.leaflet-div-icon {
+    background: none;
+    border: none;
+}
+
+.leaflet-marker-icon img {
+    height: 24px;
+    width: 24px;
+}
+
+/* Apply the shake animation to haarvest icon*/
+@keyframes shake {
+    0% { transform: translateX(0) rotate(0deg); }
+    5% { transform: translateX(-1px) rotate(5deg); }
+    10% { transform: translateX(1px) rotate(-5deg);; }
+    15% { transform: translateX(-1px) rotate(5deg);; }
+    20%, 100% { transform: translateX(0) rotate(0deg);; }
+}
+
+.shake {
+    animation: shake 2.5s infinite;
+}
+
 p {
     margin: 5px;
 }
