--- a/style.css
+++ b/style.css
@@ -114,6 +114,16 @@ p {
     padding: 8px;
     text-align: center;
     background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.grid-item img {
+    width: 48px;
+    padding: 10px;
 }
 
 .header {
